@@ -1,0 +1,13 @@
+/*!
+ * Start Bootstrap - Round About HTML Template (http://startbootstrap.com)
+ * Code licensed under the Apache License v2.0.
+ * For details, see http://www.apache.org/licenses/LICENSE-2.0.
+ */
+
+.img-center {
+  margin: 0 auto;
+}
+
+footer {
+    margin: 50px 0;
+}
